--- a/react-portfolio/src/components/About/About.css
+++ b/react-portfolio/src/components/About/About.css
@@ -84,7 +84,9 @@
 }
 
 @media screen and (max-width: 992px){
-
+  .about{
+    min-height: auto;
+  }
   .about .line-styling{
     top: 20px;
   }
@@ -134,7 +136,7 @@
 }
 
 @media screen and (max-width: 600px){
-
+  
   .about .line-styling .style-circle{
     width: 5px;
     height: 5px;
@@ -150,11 +152,11 @@
     font-size: 2.5rem;
   }
 
-    .about-description > p{
-      font-size: 0.95rem;
-    }
+  .about-description > p{
+    font-size: 0.95rem;
+  }
 
-    .about-img > img {
-        width: 200px;
-    }
+  .about-img > img {
+      width: 200px;
+  }
 }
