--- a/react-portfolio/src/components/Projects/Projects.css
+++ b/react-portfolio/src/components/Projects/Projects.css
@@ -74,6 +74,9 @@
 
 
 @media screen and (max-width: 992px) {
+    .projects{
+        min-height: auto;
+    }
     .projects--bodyContainer {
         display: flex;
         flex-direction: column;
